Diseño con referencia de www.colorzilla.com/gradient-editor/

--- a/css/invie.css
+++ b/css/invie.css
@@ -9,7 +9,10 @@
 	margin: 10px;
 	border: 2px solid red;
 }*/
-
+/*
+Difuminado de colores para diferentes navegadores
+http://www.colorzilla.com/gradient-editor/
+*/
 body {
 	font-family: 'Allerta', sans-serif;
 	margin: 0;
