--- a/css/invie.css
+++ b/css/invie.css
@@ -108,8 +108,9 @@ body {
 
 
 .contenedor {
-	width: 800px;
+	max-width: 800px;
 	margin: auto;
+	position: relative;
 }
 
 .guitarra {
@@ -252,4 +253,55 @@ input:focus, textarea:focus {
 
 .tabla {
 	margin: 50px 0;
+}
+
+@media screen and (max-width: 800px) {
+	/*body{
+		border: 10px solid red;
+
+	}
+	.contenedor {
+		width: auto;
+		max-width: 800px;
+	}*/
+	/* Portada*/
+	.titulo {
+		font-size: 45px;
+		margin-top: 30px;
+	}
+	.title-a {
+		font-size: 18px;
+	}
+	.portada {
+		height: auto;
+	}
+	.portada .button {
+		margin-bottom: 30px;
+		display: inline-block;
+	}
+	/* Portada*/
+
+	/* Guitarras */
+	.guitarras {
+		/*border: 10px solid red;*/
+		text-align: center;
+	}
+	.izquierda, .derecha {
+		float: none;
+		position: static;
+	}
+	.title-b {
+		margin: 10px 15px;
+	}
+	.guitarra li {
+		list-style: none;
+	}
+	.guitarra.b {
+		height: auto;
+	}
+	.contenedor-guitarra-b {
+		position: static;
+		margin: 0;
+	}
+	/* Guitarras */
 }
