--- a/css/invie.css
+++ b/css/invie.css
@@ -1,3 +1,42 @@
+@font-face {
+    font-family: 'icomoon';
+    src:    url('../fonts/icomoon.eot?xe5kqt');
+    src:    url('../fonts/icomoon.eot?xe5kqt#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?xe5kqt') format('truetype'),
+        url('../fonts/icomoon.woff?xe5kqt') format('woff'),
+        url('../fonts/icomoon.svg?xe5kqt#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-envelope:before {
+    content: "\e900";
+}
+.icon-phone:before {
+    content: "\e942";
+}
+.icon-menu:before {
+    content: "\e9bd";
+}
+.icon-cancel-circle:before {
+    content: "\ea0d";
+}
+
 /*font-family: 'Montserrat', sans-serif;*/
 /*font-family: 'Allerta', sans-serif;*/
 /* * {
@@ -255,6 +294,21 @@ input:focus, textarea:focus {
 	margin: 50px 0;
 }
 
+.burgerbuttom {
+	width: 40px;
+	border-radius: 50%;
+	line-height: 40px;
+	height: 40px;
+	background: #395667;
+	display: inline-block;
+	text-align: center;
+	cursor: pointer;
+	position: absolute;
+	left: 20px;
+	top: 20px;
+	z-index: 3;
+}
+
 @media screen and (max-width: 800px) {
 	/*body{
 		border: 10px solid red;
@@ -304,4 +358,147 @@ input:focus, textarea:focus {
 		margin: 0;
 	}
 	/* Guitarras */
+}
+
+@media screen and (max-width: 767px) {
+	.footer .contenedor {
+		display: block;
+	}
+
+	.contacto {
+		margin: 0 auto;
+	}
+
+	.formulario {
+		display: block;
+		margin: 0 auto;
+		width: 300px;
+	}
+
+	.intereses label{
+		display: block;
+		font-size: 16px;
+	}
+
+	.col1 {
+		margin: 0; 
+	}
+
+	input[type="text"], 
+	input[type="email"] {
+		font-size: 16px;
+		padding: 5px;
+	}
+
+	textarea {
+		width: 100%;
+	}
+
+	input[type="radio"], 
+	input[type="checkbox"] {
+		zoom: 1.5;
+	}
+}
+
+@media screen and (max-width: 650px) {
+
+	.header {
+		text-align: center;
+	}
+
+	.logotipo {
+		margin: 0;
+	}
+	.menu {
+		/*border: red solid 1px;*/
+		position: static;
+		display: block;
+	}
+	.menu li:first-child {
+		/*border: red solid 1px;*/
+		margin: 0;
+	} 
+
+	.menu ul {
+		padding: 0;
+	}
+
+	.contenedor-guitarra-b {
+		position: static;
+		margin: 0;
+	}
+
+	.contenedor-guitarra-a {
+		padding: 0;
+	}
+
+}
+
+@media screen and (max-width: 500px) {
+/* Portada */
+	.portada .contenedor {
+		position: static;	
+	}
+	.menu {
+		
+		background: rgba(255, 60, 88, .8);
+		position: absolute;
+		left: -100%;
+		top: 0;
+		z-index: 2;
+		bottom: 0;
+		right: 0;
+		display: flex;
+		width: 100%;
+		align-items: center;
+		transition: .3s
+	}
+
+	.menu.active{
+		left: 0;
+	}
+	.menu ul {
+		flex: 1;
+	}
+
+
+	.menu li{
+		display: block;		
+		margin: 0;
+		padding: 8px 0;
+		border-bottom: 1px solid white;
+	}
+
+	.menu li:before {
+		display: none;
+	}
+
+	.menu li:first-child {
+		border-top: 1px solid white;
+	}
+
+	.portada {
+		text-align: center;
+	}
+
+	.titulo {
+		font-size: 30px
+	}
+
+	.title {
+		font-size: 16px
+	}
+
+	.title-b {
+		font-size: 30px
+	}
+/* Portada */
+
+/* Guitarras*/
+	.guitarras img {
+		width: 200px;
+	}
+/* Guitarras*/
+
+
 }
